--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cell spacing="20">
         <tr>
-          <td> <img src="C:\Users\greeshma\Pictures\Greeshma.jpeg" alt="Greeshma"></td>
+          <td> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fwallpaper%2F&psig=AOvVaw37NQYL72Yo9yWQxBlDTci2&ust=1681228864558000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCKiVxOXXn_4CFQAAAAAdAAAAABAD" alt="Greeshma"></td>
           <td>
             <h1>Greeshma</h1>
     <h2><a href="C:\Users\greeshma\Documents\web development\html\Contact.html">Contact </a></h2>
@@ -118,41 +118,40 @@
         </tr>
         <tr>   
             <td>CSS(3)</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif"  width="20" height="20"></td>
+            <td>⭐⭐⭐⭐⭐</td>
             <td> Method factory pattern</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif"  width="20" height="20"></td>
-
+            <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
             <td>HTML(5)</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\blank star.png"  width="10" height="10"></td>
+            <td>⭐⭐⭐⭐⭐</td>
             <td> Object ooriented programming</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\blank star.png"  width="10" height="10"></td>
-        </tr>
+            <td>⭐⭐⭐⭐</td>
+            </tr>
         <tr>
             <td> Json</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif"  width="20" height="20"></td>
+            <td>⭐⭐⭐⭐⭐</td>
             <td> SASS/SCSS</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\blank star.png"  width="10" height="10"></td>
-        </tr>
+            <td>⭐⭐⭐⭐⭐</td>
+              </tr>
         <tr>
             <td> MYSQL</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif"  width="20" height="20"></td>
+           <td>⭐⭐⭐⭐⭐</td>
             <td>SEO</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\blank star.png"  width="10" height="10"></td>
-        </tr>
+            <td>⭐⭐⭐⭐</td>
+            </tr>
         <tr>
             <td> PHP</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif"  width="20" height="20"></td>
-            <td> SCRUM</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\blank star.png"  width="10" height="10"></td>
-        </tr>
+            <td>⭐⭐⭐⭐⭐</td>
+             <td> SCRUM</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
         <tr>
             <td>XML</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif"  width="20" height="20"></td>
-            <td> SINGLETON Pattern</td>
-            <td><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\images.jfif" width="20" height="20"><img src="C:\Users\greeshma\Documents\web development\html\blank star.png"  width="10" height="10"></td>
-        </tr>
+            <td>⭐⭐⭐⭐⭐</td>
+             <td> SINGLETON Pattern</td>
+            <td>⭐⭐⭐⭐⭐</td>
+             </tr>
     </table>
 </body>
 </html>
