--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </tr>
             <tr>
                 <td>
-                    SSLC
+                    SSLc
                 </td>
                 <td>
                     76%
