--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cell spacing="20">
         <tr>
-          <td> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fwallpaper%2F&psig=AOvVaw37NQYL72Yo9yWQxBlDTci2&ust=1681228864558000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCKiVxOXXn_4CFQAAAAAdAAAAABAD" alt="Greeshma"></td>
+          <td> <img src="https://cdn.pixabay.com/photo/2018/01/12/10/19/fantasy-3077928__340.jpg" alt="Greeshma"></td>
           <td>
             <h1>Greeshma</h1>
     <h2><a href="C:\Users\greeshma\Documents\web development\html\Contact.html">Contact </a></h2>
