--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cell spacing="20">
         <tr>
-          <td> <img src="https://cdn.pixabay.com/photo/2018/01/12/10/19/fantasy-3077928__340.jpg" alt="Greeshma"></td>
+          <td> <img src="https://cdn.pixabay.com/photo/2018/01/12/10/19/fantasy-3077928__340.jpg" alt="Greeshma"width="120" height="120"></td>
           <td>
             <h1>Greeshma</h1>
     <h2><a href="C:\Users\greeshma\Documents\web development\html\Contact.html">Contact </a></h2>
