--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
             Adur anayappa layout,<br>
             Kalkere main road,<br>
             Ramurthinagar<br>
-            Bangalore
+            Bangalore.
         </p>
     </body>
 </html>
