--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
           <td> <img src="https://cdn.pixabay.com/photo/2018/01/12/10/19/fantasy-3077928__340.jpg" alt="Greeshma"width="120" height="120"></td>
           <td>
             <h1>Greeshma</h1>
-    <h2><a href="https://github.com/kasiGreeshma/CV/blob/main/Contact.html">Contact </a></h2>
-    <h2><a href="https://github.com/kasiGreeshma/CV/blob/main/Contact.html">Address</a></h2>
+    <h2><a href="Contact.html">Contact </a></h2>
+    <h2><a href="Contact.html">Address</a></h2>
     <p><em><strong>Greeshma </strong>is the Founder and CPO of the website</em></p>
     <p>I am power bi developer. I love to learn new technologies</p>
           </td>
@@ -36,7 +36,7 @@
     </ol>
     <hr color="yellow" noshade size="3">
     <h1> vegetables</h1>
-    <a href="https://github.com/kasiGreeshma/CV/blob/main/vegetables.html" target="_self">click here for choosing vegetables</a>
+    <a href="vegetables.html" target="_self">click here for choosing vegetables</a>
     <hr>
     <table border="3" align="left">
         <colspan>
