--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Contact</title>
+        <link rel="stylesheet" href="style.css">
     <body>
         <h1><u>
             Contact
