--- a/Contact.html
+++ b/Contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>Contact</title>
         <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <h1><u>
             Contact
