--- a/index.html
+++ b/index.html
@@ -96,7 +96,14 @@
     </table>
     <h3> Skills</h3>
         <table align="left" cellspacing="10">
-        
+        <thead>
+            <tr>
+                <th>Skills</th>
+                <th>Rating</th>
+                <th>Skills</th>
+                <th>Rating</th>
+            </tr>
+            </thead>
             <tr>
                 <td> Bootstrap Framework</td>
                 <td>⭐⭐⭐⭐⭐</td>
