--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         <table align="left" cellspacing="10">
         <thead>
             <tr>
-                <th>Skills</th>
+               <u> <th>Skills</th>
                 <th>Rating</th>
                 <th>Skills</th>
-                <th>Rating</th>
+                   <th>Rating</th></u>
             </tr>
             </thead>
             <tr>
