--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         <table align="left" cellspacing="10">
         <thead>
             <tr>
-               <u> <th>Skills</th>
+                <th>Skills</th>
                 <th>Rating</th>
                 <th>Skills</th>
-                   <th>Rating</th></u>
+                   <th>Rating</th>
             </tr>
             </thead>
             <tr>
